fix cut off header Fixes #31

--- a/styles.css
+++ b/styles.css
@@ -265,3 +265,8 @@ border-color: white;
         cursor: pointer;
         margin-right: 10px;
     }
+
+    #about-link {
+      position: relative;
+      top: -165px;
+    }
